--- a/Source/SoA/SoA_Editor/Views/OutputDialogView.xaml
+++ b/Source/SoA/SoA_Editor/Views/OutputDialogView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="SoA_Editor.Views.InputParameterDialogView"
+﻿<UserControl x:Class="SoA_Editor.Views.OutputDialogView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -7,7 +7,7 @@
              xmlns:vm="clr-namespace:SoA_Editor.ViewModels"
              xmlns:system="clr-namespace:System;assembly=mscorlib"
              xmlns:wpf="clr-namespace:MaterialDesignThemes.Wpf;assembly=MaterialDesignThemes.Wpf"
-             mc:Ignorable="d" d:DataContext="{d:DesignInstance vm:InputParameterDialogViewModel}"
+             mc:Ignorable="d" d:DataContext="{d:DesignInstance vm:OutputDialogViewModel}"
              d:DesignHeight="275" d:DesignWidth="400" d:Background="White"
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              TextElement.Foreground="{DynamicResource MaterialDesignBody}"
@@ -20,10 +20,25 @@
     <Grid>
         <StackPanel>
             <TextBlock Visibility="{Binding Error, Converter={StaticResource StringIsEmptyVisibilityConverter}}" Text="{Binding Error, Mode=TwoWay}" Foreground="red" Style="{DynamicResource MaterialDesignBody2TextBlock}"  d:Text="Error" HorizontalAlignment="Center" TextWrapping="Wrap" Width="350" Margin="0 8 0 0"/>
-            <TextBox Margin="0 15 0 0" Text="{Binding ParamName, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Style="{DynamicResource MaterialDesignFloatingHintTextBox}" materialDesign:HintAssist.Hint="Parameter Name" Width="350"/>
-            <ComboBox Margin="0 24 0 0" Width="350" materialDesign:HintAssist.Hint="Quantity" ItemsSource="{Binding Quantities, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" IsEditable="True" DisplayMemberPath="FormatedName" SelectedItem="{Binding Path=Quantity, Mode=TwoWay}" Style="{StaticResource MaterialDesignFloatingHintComboBox}" />
-            <CheckBox IsChecked="{Binding Optional}"  Content="Optional" Margin="25 25 0 0"/>
-            <StackPanel Orientation="Horizontal" Margin="0 35 0 0" HorizontalAlignment="Center">
+            <TextBox Text="{Binding OutputName, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Style="{DynamicResource MaterialDesignFloatingHintTextBox}" materialDesign:HintAssist.Hint="Output Name" HorizontalAlignment="Center" TextWrapping="Wrap" Width="350" Margin="0 24 0 0"/>
+
+            <Grid Margin="20 25 20 0" VerticalAlignment="Center">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="125"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
+
+                <ComboBox Grid.Row="0" Grid.Column="0" materialDesign:HintAssist.Hint="(at, before, after)" ItemsSource="{Binding TestsMin, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" SelectedItem="{Binding Path=TestMin, Mode=TwoWay}" Style="{StaticResource MaterialDesignFloatingHintComboBox}" />
+                <TextBox Name="TextMin" PreviewTextInput="TextMin_PreviewTextInput"  Grid.Row="0" Grid.Column="1" Margin="10 0 0 0" Text="{Binding Min, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Style="{DynamicResource MaterialDesignFloatingHintTextBox}" materialDesign:HintAssist.Hint="Minimum" />
+
+                <ComboBox Margin="0 12 0 0" Grid.Row="1" Grid.Column="0" materialDesign:HintAssist.Hint="(at, before, after)" ItemsSource="{Binding TestsMax, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" SelectedItem="{Binding Path=TestMax, Mode=TwoWay}" Style="{StaticResource MaterialDesignFloatingHintComboBox}" />
+                <TextBox Margin="10 12 0 0" Name="TextMax" PreviewTextInput="TextMax_PreviewTextInput" Grid.Row="1" Grid.Column="1" Text="{Binding Max, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Style="{DynamicResource MaterialDesignFloatingHintTextBox}" materialDesign:HintAssist.Hint="Maximum" />
+            </Grid>
+            <StackPanel Orientation="Horizontal" Margin="0 25 0 0" HorizontalAlignment="Center">
                 <Button Command="{x:Static wpf:DialogHost.CloseDialogCommand}" IsDefault="True" Content="Save" Style="{DynamicResource MaterialDesignFlatButton}" Margin="0 0 25 0">
                     <Button.CommandParameter>
                         <system:Boolean>True</system:Boolean>
