--- a/Source/SoA/SoA_Editor/Views/CompanyInfoView.xaml
+++ b/Source/SoA/SoA_Editor/Views/CompanyInfoView.xaml
@@ -89,7 +89,7 @@
         </StackPanel>
 
         <StackPanel Grid.Row="3" Grid.Column="4" Margin="10 0 10 0">
-            <Label Content="Contact Info:" FontWeight="Bold"/>
+            <Label Content="Contact Phone:" FontWeight="Bold"/>
             <TextBox Height="25" x:Name="PhoneNo"></TextBox>
         </StackPanel>
 
@@ -121,8 +121,16 @@
                Margin="10 70 0 10" Grid.ColumnSpan="5" Background="#102E5B"/>
 
         <!-- Row 5 -->
+        <StackPanel Grid.Row="5" Grid.Column="1" Margin="10 0 10 0">
+            <Label Content="Email:" FontWeight="Bold"/>
+            <TextBox Height="25" x:Name="Emails"></TextBox>
+        </StackPanel>
 
-        <!--<Button x:Name="SaveCompanyInfo" Grid.Row="5" Grid.Column="1" Height="30">Save Company Info</Button>-->
+        <StackPanel Grid.Row="5" Grid.Column="2" Margin="10 0 10 0">
+            <Label Content="Url:" FontWeight="Bold"/>
+            <TextBox Height="25" x:Name="Urls"></TextBox>
+        </StackPanel>
+
 
     </Grid>
 </UserControl>
