--- a/Source/SoA/SoA_Editor/Views/RangeView.xaml
+++ b/Source/SoA/SoA_Editor/Views/RangeView.xaml
@@ -1,15 +1,11 @@
 ﻿<UserControl x:Class="SoA_Editor.Views.RangeView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
-             xmlns:ei="http://schemas.microsoft.com/expression/2010/interactions"
-             xmlns:local="clr-namespace:SoA_Editor.Views"
-             xmlns:cal="http://www.caliburnproject.org"
-             mc:Ignorable="d" 
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:vm="clr-namespace:SoA_Editor.ViewModels"
+             mc:Ignorable="d" d:DataContext="{d:DesignInstance vm:RangeViewModel}"
              d:DesignHeight="500" d:DesignWidth="800"
-             xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              TextElement.Foreground="{DynamicResource MaterialDesignBody}"
              TextElement.FontWeight="Regular"
              TextElement.FontSize="13"
@@ -19,46 +15,47 @@
              FontFamily="{DynamicResource MaterialDesignFont}">
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="10"/>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="10"/>
+            <RowDefinition Height="10" />
+            <RowDefinition Height="*" />
+            <RowDefinition Height="*" />
+            <RowDefinition Height="10" />
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="10" />
-            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="*" />           
             <ColumnDefinition Width="10" />
         </Grid.ColumnDefinitions>
-        
-       <StackPanel Orientation="Vertical" Grid.ColumnSpan="2" Grid.RowSpan="2">
-            <Label x:Name="activeHierarchy" Content="range description" Margin="0,0,0,20"/>
 
-            <DataGrid CanUserAddRows="True" SelectionMode="Extended" Height="300" ScrollViewer.VerticalScrollBarVisibility="Auto"
+        <StackPanel Orientation="Vertical" Grid.ColumnSpan="2" Grid.RowSpan="2">
+            <StackPanel Orientation="Horizontal">
+                <Label Content="{Binding activeHierarchy}" Margin="0,0,0,10" />                
+            </StackPanel>         
+            <TextBlock TextDecorations="Underline">Please select a row by clicking on any of the values.</TextBlock>
+            <DataGrid CanUserAddRows="True" SelectionMode="Extended" Height="250" ScrollViewer.VerticalScrollBarVisibility="Auto"
                         SelectionUnit="FullRow" x:Name="RangeGrid" SelectedItem="{Binding Row}"
                         ItemsSource="{Binding RangeGrid}" AutoGenerateColumns="true" IsReadOnly="True"
-                        CanUserReorderColumns="True" CanUserSortColumns="True" Margin="0,0,0,20">
-            </DataGrid>
-
-
-            <TextBlock Text="" Margin="0,20,0,20" x:Name="Formula"/>
-
-            <ItemsControl x:Name="ExprVars">
-                <ItemsControl.ItemTemplate>
-                    <DataTemplate>
-                        <StackPanel Orientation="Horizontal">
-                            <TextBlock Text="{Binding Path=Name}" />
-                            <TextBox Width="100" Text="{Binding Path=Value}" />
-                        </StackPanel>
-                    </DataTemplate>
-                </ItemsControl.ItemTemplate>
-            </ItemsControl>
-
-            <StackPanel Orientation="Horizontal">
-
-                <Button x:Name="calcButton" Content="Calculate" Margin="0,0,40,0"/>
-                <TextBlock Text="value" x:Name="CalculatedValue"/>
-
-            </StackPanel>
+                        CanUserReorderColumns="True" CanUserSortColumns="True" Margin="0 0 0 5">
+            </DataGrid>            
         </StackPanel>
+        <GroupBox Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="2" Width="250" HorizontalAlignment="Left" Header="Formula">
+            <StackPanel>
+                <TextBlock Text="{Binding Formula}" Margin="0,10,0,10" FontWeight="Bold"/>
+                <ItemsControl ItemsSource="{Binding ExprVars}">
+                    <ItemsControl.ItemTemplate>
+                        <DataTemplate>
+                            <StackPanel Orientation="Horizontal">                                
+                                    <TextBlock Text="{Binding Path=Name}" />
+                                    <TextBox Margin="10 0 0 0" Width="100" Text="{Binding Path=Value, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                            </StackPanel>
+                        </DataTemplate>
+                    </ItemsControl.ItemTemplate>
+                </ItemsControl>
 
+                <StackPanel Orientation="Horizontal" Margin="0 10 0 0">
+                    <Button x:Name="calcButton" Content="Calculate" Margin="0,0,40,0" />
+                    <TextBlock FontWeight="Bold" Text="{Binding CalculatedValue}" />
+                </StackPanel>
+            </StackPanel>
+        </GroupBox>
     </Grid>
 </UserControl>
